--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Ruff for linting
         run: |
           echo "Running Ruff for linting..."
-          ruff ./backend
+          ruff check ./backen
 
       - name: Run Black for formatting checks
         run: |
