--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black mypy
+          pip install ruff black
 
       - name: Run Ruff for linting
         run: |
@@ -35,8 +35,3 @@ jobs:
         run: |
           echo "Running Black for formatting checks..."
           black --check ./backend
-
-      - name: Run Mypy for type checks
-        run: |
-          echo "Running Mypy for type checks..."
-          mypy ./backend
